After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641201 - Can't start against latest gtk+ due undefined symbol: gdk_display_add_client_message_filter
Can't start against latest gtk+ due undefined symbol: gdk_display_add_client_...
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: keyboard
2.91.x
Other Linux
: Normal blocker
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-02-01 23:14 UTC by Luca Ferretti
Modified: 2011-02-01 23:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Luca Ferretti 2011-02-01 23:14:50 UTC
As per summary, keyboard plugin (from git master) fails to start against gtk+-3 (from git master too).

.xsession-errors reports the following

** (gnome-settings-daemon:20336): WARNING **: /opt/gnome3/lib64/gnome-settings-daemon-3.0/libkeyboard.so: undefined symbol: gdk_display_add_client_message_filter

mclasen suggest to use with gdk_window_add_filter()