Don't use gdk_display_add_client_message_filter

It just got removed from GTK+. Instead, use gdk_window_add_filter.
https://bugzilla.gnome.org/show_bug.cgi?id=641201